# anesthesia-exam

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  HEARTBEAT.md  IDENTITY.md  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  SOUL.md  SPEC.md  TOOLS.md  conftest.py  crush.json  main.py  opencode.json  pyproject.toml
.claude/skills/duplicate-checker/: SKILL.md
.github/: copilot-instructions.md
.github/bylaws/: python-environment.md  streamlit-port.md
.github/prompts/: add-explanation.prompt.md  batch-import.prompt.md  extract-past-exam-patterns.prompt.md  generate-from-blueprint.prompt.md  generate-mcq.prompt.md  manage-questions.prompt.md  quick-entry.prompt.md
.github/workflows/: ci.yml
configs/asset-aware/: miller_marker_hq.json
data/: questions.db
data/sources/: manifest.json
deploy/systemd/: anesthesia-exam-openclaw-worker.service  anesthesia-exam-openclaw-worker.timer  anesthesia-exam-telegram-bot.service  anesthesia-exam-telegram-status.service  anesthesia-exam-telegram-status.timer  anesthesia-exam-web.service
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
scripts/: audit_miller_image_quality.py  batch_fill_past_exam_explanations.py  configure_openclaw_gb10.sh  configure_openclaw_repo_agent.sh  import_written_past_exams.py  ingest_miller_chapters.py  install_openclaw_local.sh  install_openclaw_telegram_services.sh  install_openclaw_worker_timer.sh  install_systemd_service.sh  migrate_json_to_sqlite.py  openclaw.sh  openclaw_front_proxy.py  refresh_miller_figures.py  repair_109_written_answers.py  run_heartbeat.py  run_openclaw_heartbeat_worker.py  run_telegram_admin_bot.py  run_telegram_status_report.py  run_web.sh  validate_miller_asset_ingest.py  verify_db.py
scripts/pdf_experiments/: compare_section_extraction.py  extract_chapter_79.py  ingest_ch79_comparison.py
src/: __init__.py
src/application/: __init__.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
tests/: compare_section_extraction.py  conftest.py  test_agent_provider_config.py  test_ch79_ingest.py  test_chapter_extraction.py  test_draft_workflow_guards.py  test_exam_pipeline_harness.py  test_exam_tool_handlers.py  test_import_written_past_exams.py  test_openclaw_backlog_worker.py  test_past_exam_explanation_service.py  test_past_exam_extraction_tools.py  test_past_exam_figure_service.py  test_past_exam_semantic_outline.py  test_question_review_service.py  test_repo_pytest_config.py  test_scope_request_dispatch_service.py  test_sqlite_connection_hardening.py  test_streamlit_async_chat.py  test_streamlit_document_manifest.py  test_streamlit_generation_orchestration.py  test_streamlit_performance_rescue.py  test_streamlit_practice_browser.py  test_telegram_admin_service.py  test_textbook_formal_save_gate.py  test_textbook_generation_service.py
(+76 files in other folders)
