[project]
name = "anesthesia-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightrag-hku>=1.4.11",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
# Web App (Streamlit + PDF export)
webapp = [
    "streamlit>=1.53.1",
    "reportlab>=4.4.9",
]
# PDF 解析 (Streamlit 上傳後處理用，重型依賴)
pdf = [
    "marker-pdf>=1.10.2",
    "pymupdf>=1.26.7",
]

[dependency-groups]
dev = [
    "lxml>=5.0.0",
    "playwright>=1.52.0",
    "pre-commit>=4.0",
    "PyMuPDF>=1.24.0",
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "streamlit>=1.53.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["libs/asset-aware-mcp", ".git", ".venv", "vendor"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end browser smoke tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "G",
    "LOG",
    "T20",
]
ignore = [
    "E501",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"scripts/**" = ["T20", "E402"]
"src/infrastructure/crush/**" = ["G"]
"src/presentation/streamlit/**" = ["E402"]
